Document contributor guide and systemd settings